T9761 Fix popup close in comments popup

--- a/ovidentia/skins/ovidentia/templates/comments.html
+++ b/ovidentia/skins/ovidentia/templates/comments.html
@@ -59,6 +59,7 @@
 <input type="hidden" name="article" value="{ article }">
 <input type="hidden" name="com" value="{ com }">
 <input type="hidden" name="addcomment" value="add">
+<input type="hidden" name="popup" value="{ popup }">
 
 <table id="bab_edit_comment" class="BabLoginCadreBackground" width="95%" border="0" cellspacing="2" cellpadding="0" align="center">
 <!--#if rate_articles -->
@@ -151,6 +152,7 @@
 <input type="hidden" name="article" value="{ article }">
 <input type="hidden" name="comment_id" value="{ comment_id }">
 <input type="hidden" name="action" value="save">
+<input type="hidden" name="popup" value="{ popup }">
 
 <table id="bab_edit_comment" class="BabLoginCadreBackground" width="95%" border="0" cellspacing="0" cellpadding="2" align="center">
 <tr>
