Fix the delete button

--- a/ovidentia/skins/ovidentia/templates/posts.html
+++ b/ovidentia/skins/ovidentia/templates/posts.html
@@ -592,7 +592,7 @@ class="BabForumTopicsNavContribution" href="{ confirmurl }" onclick="return bab_
 		<a  href="{ moreurl }">{ morename }</a><img src="{ babSkinPath }images/Puces/Space1PxTrans.gif" alt="" width="5" height="1" border="0">
 		<!--#endif moreurl --> 
 		<!--#if removeurl --> 
-		<a href="{ removeurl }" title="{ removeconfirmtxt }" onclick="return confirm(this);">{ removetxt }</a><img src="{ babSkinPath }images/Puces/Space1PxTrans.gif" alt="" width="5" height="1" border="0">
+		<a href="{ removeurl }" title="{ removeconfirmtxt }" onclick="return bab_postLinkConfirm(this);">{ removetxt }</a><img src="{ babSkinPath }images/Puces/Space1PxTrans.gif" alt="" width="5" height="1" border="0">
 		<!--#endif removeurl --> 
 		</td>
 		</tr>
