Add a checkbox to authenticate in full screen

--- a/ovidentia/skins/ovidentia/templates/sites.html
+++ b/ovidentia/skins/ovidentia/templates/sites.html
@@ -1186,6 +1186,9 @@ function hideShowCnx()
 	<tr> 
         <td colspan="2"><label><input type="checkbox" name="auth_https" <!--#if auth_https --> checked="checked"<!--#endif auth_https --> value="1" style="vertical-align:middle" />&nbsp;{ t_auth_https }</label></td>
     </tr>
+    <tr> 
+        <td colspan="2"><label><input type="checkbox" name="auth_fullscreen" <!--#if auth_fullscreen --> checked="checked"<!--#endif auth_fullscreen --> value="1" style="vertical-align:middle" />&nbsp;{ t_auth_fullscreen }</label></td>
+    </tr>
 	<tr> 
 		<td colspan="2"><label><input type="checkbox" name="auth_multi_session" <!--#if auth_multi_session --> checked="checked"<!--#endif auth_multi_session --> value="1" style="vertical-align:middle" />&nbsp;{ t_auth_multi_session }</label></td>
 	</tr>
