--- a/ovidentia/skins/ovidentia/templates/login.html
+++ b/ovidentia/skins/ovidentia/templates/login.html
@@ -1,7 +1,7 @@
 
 
 <!--#begin login -->
-<form method="post" action="{ babPhpSelf }">
+<form method="post" action="{ babPhpSelf }" class="bab-login-form">
 <input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 
 <input type="hidden" name="tg" value="login" />
