fix SCRIPT_NAME from router.php

--- a/ovidentia/skins/ovidentia/templates/page.html
+++ b/ovidentia/skins/ovidentia/templates/page.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="Content-type" content="{ sContent }"/>
  
-    <base href="{ babUrlScript }" />
+    <base href="{ babUrl }" />
  
     <title>{ babSiteName }<!--#if pageTitle --> - { pageTitle }<!--#endif pageTitle --></title>
  
