replace text field with a date picker

--- a/ovidentia/skins/ovidentia/templates/admstats.html
+++ b/ovidentia/skins/ovidentia/templates/admstats.html
@@ -34,7 +34,7 @@
 <div class="BabLoginCadreBackground" style="padding: 2px; margin: 1em 3em"> 
 <div class="BabLoginMenuBackground" style="padding: 1em">
 <div style="margin: 2em 1em">
-{ t_delete_statitems_before } <input name="remove_before" type="text" value="" />
+<label>{ t_delete_statitems_before } { datepicker }</label>
 </div>
 <div style="margin: 2em 1em 0 1em; text-align: center">
 <input type="submit" name="submit" value="{ t_save }" />
