Added option to suppress certificate validation in smtp.
To avoid PHP 5.6 certificate verification failure: (see
https://github.com/PHPMailer/PHPMailer/wiki/Troubleshooting#php-56-certificate-verification-failure
)

--- a/ovidentia/skins/ovidentia/templates/sites.html
+++ b/ovidentia/skins/ovidentia/templates/sites.html
@@ -359,6 +359,15 @@ mm(sksel);
 				              </select>
 							</td>
 							</tr>
+                          <tr> 
+                            <td>{ validation }</td>
+                            <td> 
+                              <select name="smtpnovalidation">
+                                 <option value="0" <!--#if arr[smtpnovalidation] "== 0" -->selected="selected"<!--#endif arr[smtpnovalidation] -->>{ certificate_validation }</option>
+                                 <option value="1" <!--#if arr[smtpnovalidation] "== 1" -->selected="selected"<!--#endif arr[smtpnovalidation] -->>{ no_certificate_validation }</option>
+                              </select>
+                            </td>
+                            </tr>
 				          <tr> 
 				            <td>{ smtpuser }</td>
 				            <td> 
