--- a/ovidentia/skins/ovidentia/templates/admcals.html
+++ b/ovidentia/skins/ovidentia/templates/admcals.html
@@ -53,6 +53,7 @@
 <tr class="BabSiteAdminTitleFontBackground"> 
 <td>{ nametxt } </td>
 <td>{ desctxt }</td>
+<td width="1%">{ bgcolortxt }</td>
 <td colspan="2">&nbsp;</td>
 <td width="1%">{ disabledtxt }</td>
 </tr>
@@ -60,6 +61,7 @@
 <!--#if altbg --><tr class="BabSiteAdminFontBackground"><!--#else altbg --><tr class="BabForumBackground1"><!--#endif altbg -->
 <td><a class="BabSiteAdminListLink" href="{ nameurl }">{ name }</a></td>
 <td>{ description }</td>
+<td style="background-color:#{ bgcolor }"></td>
 <td align="center"><a class="BabSiteAdminListLink" href="{ rightsurl }">{ rightstxt }</a></td>
 <td align="center"><a href="{ delurl }" title="{ t_delete }"><img alt="{ t_delete }" border="0" src="{ babSkinPath }images/Puces/del.gif"></a></td>
 <td valign="middle" width="0%" align="center"> 
@@ -69,7 +71,7 @@
 <!--#endin getnext -->
 <tr class="BabSiteAdminTitleFontBackground"> 
 <td><a href="{ urladdcal }">{ add }</td>
-<td colspan="3">&nbsp;</td>
+<td colspan="4">&nbsp;</td>
 <td width="1%" align="center"><a href="javascript:onCheckAll('calids', true)"><img src="{ babSkinPath }images/Puces/Pucecheked.gif" alt="{ checkall }" width="10" height="10" border="0"></a><a href="javascript:onCheckAll('calids', false)"><img src="{ babSkinPath }images/Puces/PuceUncheked.gif" alt="{ uncheckall }" width="10" height="10" border="0"></a></td>
 </tr>
 </table>
