--- a/ovidentia/skins/ovidentia/templates/admcals.html
+++ b/ovidentia/skins/ovidentia/templates/admcals.html
@@ -154,6 +154,16 @@ function setColor(color)
 <!--#end calendaraddr -->
 
 <!--#begin calendaraddp -->
+<script language="JavaScript">
+<!--
+function setColor(color)
+    {
+    document.forms.calcreate.bgcolor.value=color;
+    if (color == '') color = 'fff';
+    document.getElementById('evtColor').style.backgroundColor = '#'+color;
+    }
+//-->
+</script>
 <form name="calcreate" method="post" action="{ babPhpSelf }">
 <input type="hidden" name="babCsrfProtect" value="{ babCsrfProtect }" />
 <input type="hidden" name="tg" value="{ tgval }" />
@@ -186,6 +196,13 @@ function setColor(color)
 				</select>
 			</td>
 		</tr>
+		<tr>
+			<td class="BabLoginMenuBackground" align="right" valign="middle" nowrap>{ bgcolortxt }:</td>
+			<td class="BabLoginMenuBackground" valign="middle">
+				<div id="evtColor" style="width:30px;height:15px;border:#000 1px solid;background-color:#{ bgcolor };float:left"></div>&nbsp;<a class="BabSiteAdminListLink" href="#" onclick="Start('{ selctorurl }', 'ColorWindow', 'width=400,height=400,status=no,resizable=no,top=200,left=200');return false;"><img src="{ babSkinPath }images/Puces/colorize.png" alt="" border="0" /></a>
+				<input type="hidden" name="bgcolor" value="{ bgcolor }">
+			</td>
+        </tr>
 		<tr> 
 		<td >&nbsp;</td>
 		<td  valign="middle"><input type="submit" name="submit" value="{ addtxt }" /></td>
