displaying public agenda color on agenda list

--- a/ovidentia/skins/ovidentia/templates/admcals.html
+++ b/ovidentia/skins/ovidentia/templates/admcals.html
@@ -61,7 +61,7 @@
 <!--#if altbg --><tr class="BabSiteAdminFontBackground"><!--#else altbg --><tr class="BabForumBackground1"><!--#endif altbg -->
 <td><a class="BabSiteAdminListLink" href="{ nameurl }">{ name }</a></td>
 <td>{ description }</td>
-<td style="background-color:#{ bgcolor }"></td>
+<td style="background-color:#{ bgcolor }">{ bgcolor }</td>
 <td align="center"><a class="BabSiteAdminListLink" href="{ rightsurl }">{ rightstxt }</a></td>
 <td align="center"><a href="{ delurl }" title="{ t_delete }"><img alt="{ t_delete }" border="0" src="{ babSkinPath }images/Puces/del.gif"></a></td>
 <td valign="middle" width="0%" align="center"> 
