adding usecatcolor in sites options (agenda section)

--- a/ovidentia/skins/ovidentia/templates/sites.html
+++ b/ovidentia/skins/ovidentia/templates/sites.html
@@ -821,6 +821,13 @@ document.forms.formsite_bloc3[edit].value = obj.value;
 										<option value="N" { nusebgcolor }>{ no }</option>
 									</select>
 							</dl>
+							<dl>
+							     <h5>{ usecatcolor }</h5>
+							         <select name="usecatcolor">
+							            <option value="Y" { yusecatcolor }>{ yes }</option>
+                                        <option value="N" { nusecatcolor }>{ no }</option>
+							         </select>
+							</dl>
 							<dl> 
 								<h5>{ elapstime }</h5>
 									<select name="elapstime">
