--- a/ovidentia/skins/ovidentia/templates/sites.html
+++ b/ovidentia/skins/ovidentia/templates/sites.html
@@ -607,6 +607,8 @@ function validateNum(field)
                 <input type="text" name="uploadpath" size="30" maxlength="255" value="{ arr[uploadpath] }" />
             </td>
         </tr>
+
+
         <tr>
             <td>{ maxfilesize_title }</td>
             <td>
@@ -991,6 +993,7 @@ document.forms.formsite_bloc3[edit].value = obj.value;
 <!--
 function move(bDir, el)
 {
+    el = bab_fixOrderElement(el);
     var idx = el.selectedIndex
     if (idx !=-1 && idx != 0)
     {
@@ -1073,6 +1076,7 @@ function moveOptions(src,dest)
 
 function selectAll(list)
 {
+    list = bab_fixOrderElement(list);
     list.options[0].selected = false;
     for(i=1; i < list.options.length; i++)
     {
@@ -1105,6 +1109,7 @@ function sortDD(a, b)
 
 function sortList(sortType, list)
 {
+    list = bab_fixOrderElement(list);
     if (list.length < 3) return;
     sortTypes = new Object;
     sortTypes["sortAA"] = sortAA;
